--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <a-scene background="color: #2a9d8f">
         <a-assets>
-            <img id="poin1" src="assets/Main_Hall.JPG"/>
-            <img id="poin2" src="assets/GS_0550.JPG"/>
-            <img id="poin3" src="assets/GS_0548.JPG"/>
+            <img id="poin1" src="Main_Hall.JPG"/>
+            <img id="poin2" src="GS_0550.JPG"/>
+            <img id="poin3" src="GS_0548.JPG"/>
 
         </a-assets>
 
