--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello, World! 404</title>
+    <title>Hello, World! 405</title>
     <meta name="description" content="Hello World V2">
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <!--animation component script-->
@@ -55,8 +55,8 @@
     <a-scene background="color: #2a9d8f">
         <a-assets>
             <img id="point1" src="assets/Main_Hall.jpg"/>
-            <img id="point2" src="assets/GS_0550.JPG"/>
-            <img id="point3" src="assets/GS_0548.JPG"/>
+            <img id="point2" src="assets/GS_0550.jpg"/>
+            <img id="point3" src="assets/GS_0548.jpg"/>
 
         </a-assets>
 
