--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Smooth Cam movement</title>
+    <title>Working... 405</title>
     <meta name="description" content="Smooth Cam movement">
     <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
 
