--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <img id="room1" src="assets/Main_Hall.jpg">
         <img id="room2" src="assets/GS__0548.JPG">
         <img id="room3" src="assets/GS__0550.JPG">
-        <img id="room4" src="https://cdn.glitch.com/c52283d6-3489-44e4-b56b-43550d1bc76c%2F4.jpg?v=1564408736299">
+        <img id="room4" src="assets/Main_Hall.jpg">
         
         <img id="info1" src="https://cdn.glitch.com/c52283d6-3489-44e4-b56b-43550d1bc76c%2Fpanel-1.png?v=1564467657593">
         <img id="info2" src="https://cdn.glitch.com/c52283d6-3489-44e4-b56b-43550d1bc76c%2Fpanel-2.png?v=1564467657745">
