--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </a-entity>
         <a-entity id="group-torpedo" scale="0 0 0">
           <a-image spot="linkto:#enhall;spotgroup:group-enhall;infogroup:infogroup-enhall;infoparent:infogroup-torpedo" position="0 0 10"></a-image>
-          <a-image spot="linkto:#room5;spotgroup:group-room5;infogroup:infogroup-room5;infoparent:infogroup-torpedo" position="10 0 4"></a-image>
+          <!--a-image spot="linkto:#room5;spotgroup:group-room5;infogroup:infogroup-room5;infoparent:infogroup-torpedo" position="10 0 4"></a-image-->
         </a-entity>
       </a-entity>
       
