--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <img id="info3" src="https://cdn.glitch.com/c52283d6-3489-44e4-b56b-43550d1bc76c%2Fpanel-3.png?v=1564469664126">
         <img id="info4" src="https://cdn.glitch.com/c52283d6-3489-44e4-b56b-43550d1bc76c%2Fpanel-4.png?v=1564470362318">
         
-        <img id="hotspot" src="assets/hotspot1.png">
+        <img id="hotspot" src="assets/hotspotup.png">
         <img id="info-icon" src="https://cdn.glitch.com/c52283d6-3489-44e4-b56b-43550d1bc76c%2Finfo-icon.png?v=1564471994218">
       </a-assets>
       <!-- room teleport hotspots -->
