--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Working... 407</title>
+    <title>Working... 404</title>
     <meta name="description" content="Smooth Cam movement">
     <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
 
@@ -152,6 +152,21 @@
     </script>
   </head>
   <body>
+    
+   <div class="row">
+   <div class="column" style="background-color:#586994;">
+     <h3>Navigation</h3>
+
+     <P><a href="#point1">Ground Floor</a>
+
+     <P><a href="#">First Floor</a>
+
+     <P><a href="#">Second Floor</a>
+
+     <P><a href="#">Third Floor</a>
+   </div>
+
+<div class="column2" style="background-color:rgb(219, 163, 163);">
     <a-scene background="color: #FAFAFA" inspector="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js">
       <!--leave above alone Main A-frame formating, edit the bit below-->
       
