--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
    <div class="column" style="background-color:#586994;">
      <h3>Navigation</h3>
 
-     <P><a href="#point1">Ground Floor</a>
+     <P><a href="#enhall">Ground Floor</a>
 
      <P><a href="#">First Floor</a>
 
